@@ -69,7 +69,7 @@ autonomy_state = {
 autonomy_state = {
 	id = autonomy_satellite_state
 
-	default = no
+	default = yes
 	is_puppet = no
 	min_freedom_level = 0.50
 	manpower_influence = 0.5
@@ -138,7 +138,7 @@ autonomy_state = {
 autonomy_state = {
 	id = autonomy_puppet_state
 
-	default = yes
+	default = no
 	is_puppet = yes
 	min_freedom_level = 0.25
 	manpower_influence = 0.4
