@@ -3442,7 +3442,7 @@ focus_tree = {
 		search_filters = { FOCUS_FILTER_INDUSTRY }
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus SYR_free_trade_partner"
-			add_ideas = syria_increased_resource_exports
+			increase_exports = yes
 		}
 
 	}
