@@ -1230,3 +1230,97 @@ economic_boom = {
 	ingame_calculate_size_modifier = yes
 	calculate_resource_sale_rate = yes
 }
+
+increase_exports = {
+	if = {
+		limit = { has_idea = md_closed_economy }
+		swap_ideas = {
+			remove_idea = md_closed_economy
+			add_idea = consumption_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = consumption_economy }
+		swap_ideas = {
+			remove_idea = consumption_economy
+			add_idea = semi_consumption_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = semi_consumption_economy }
+		swap_ideas = {
+			remove_idea = semi_consumption_economy
+			add_idea = mixed_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = mixed_economy }
+		swap_ideas = {
+			remove_idea = mixed_economy
+			add_idea = export_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = export_economy }
+		swap_ideas = {
+			remove_idea = export_economy
+			add_idea = globalized_trade_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = globalized_trade_economy }
+		add_political_power = 100
+	}
+	set_growth_flag = yes
+	calculate_tax_gain = yes
+	update_military_rate = yes
+	ingame_calculate_size_modifier = yes
+	calculate_resource_sale_rate = yes
+}
+
+decrease_exports = {
+	if = {
+		limit = { has_idea = md_closed_economy }
+		add_political_power = 100
+	}
+	else_if = {
+		limit = { has_idea = consumption_economy }
+		swap_ideas = {
+			remove_idea = consumption_economy
+			add_idea = md_closed_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = semi_consumption_economy }
+		swap_ideas = {
+			remove_idea = semi_consumption_economy
+			add_idea = consumption_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = mixed_economy }
+		swap_ideas = {
+			remove_idea = mixed_economy
+			add_idea = semi_consumption_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = export_economy }
+		swap_ideas = {
+			remove_idea = export_economy
+			add_idea = mixed_economy
+		}
+	}
+	else_if = {
+		limit = { has_idea = globalized_trade_economy }
+		swap_ideas = {
+			remove_idea = globalized_trade_economy
+			add_idea = export_economy
+		}
+	}
+	set_growth_flag = yes
+	calculate_tax_gain = yes
+	update_military_rate = yes
+	ingame_calculate_size_modifier = yes
+	calculate_resource_sale_rate = yes
+}
