@@ -37,54 +37,54 @@ remove_from_allowed_party = {
 }
 
 #expects a temp variable country_to_initiate which should contain original_tag to instantiate as a collabration government
-instantiate_collaboration_government = {
-	custom_effect_tooltip = compliance_80_effect_tooltip
-	hidden_effect = {
-		set_variable = { collaboration_formed@var:country_to_initiate = 1 }
+# instantiate_collaboration_government = {
+	# custom_effect_tooltip = compliance_80_effect_tooltip
+	# hidden_effect = {
+		# set_variable = { collaboration_formed@var:country_to_initiate = 1 }
 
-		if = {
+		# if = {
 			# if country_to_initiate does not exist, simply release it as a puppet
-			limit = {
-				var:country_to_initiate = {
-					exists = no
-				}
-			}
-			var:country_to_initiate = { set_variable = { collaboration_formed_by = PREV } }
-			release_autonomy = {
-				target = country_to_initiate
-				autonomy_state = autonomy_collaboration_government
-				freedom_level = 0.5
-			}
-		}
-		else = {
+			# limit = {
+				# var:country_to_initiate = {
+					# exists = no
+				# }
+			# }
+			# var:country_to_initiate = { set_variable = { collaboration_formed_by = PREV } }
+			# release_autonomy = {
+				# target = country_to_initiate
+				# autonomy_state = autonomy_collaboration_government
+				# freedom_level = 0.5
+			# }
+		# }
+		# else = {
 			# if country_to_initiate exists, create a dynamic country as our new puppet
-			create_dynamic_country = {
-				original_tag = country_to_initiate
+			# create_dynamic_country = {
+				# original_tag = country_to_initiate
 
-				set_variable = { collaboration_formed_by = PREV }
-				set_temp_variable = { new_country = this }
+				# set_variable = { collaboration_formed_by = PREV }
+				# set_temp_variable = { new_country = this }
 
-				PREV = {
-					every_controlled_state = {
-						limit = { occupied_country_tag = country_to_initiate }
+				# PREV = {
+					# every_controlled_state = {
+						# limit = { occupied_country_tag = country_to_initiate }
 
-						var:new_country = {
-							transfer_state = PREV
-						}
-					}
+						# var:new_country = {
+							# transfer_state = PREV
+						# }
+					# }
 
-					puppet = new_country
+					# puppet = new_country
 
-					set_autonomy = {
-						target = new_country
-						autonomy_state = autonomy_collaboration_government
-						freedom_level = 0.5
-					}
-				}
-			}
-		}
-	}
-}
+					# set_autonomy = {
+						# target = new_country
+						# autonomy_state = autonomy_collaboration_government
+						# freedom_level = 0.5
+					# }
+				# }
+			# }
+		# }
+	# }
+# }
 
 abandon_colony_tag = {
 	if = {
