@@ -928,8 +928,8 @@ scripted_gui = {
 				ROOT = {
 					set_autonomy = {
 						target = PREV
-						autonomy_state = autonomy_satellite_state
-						freedom_level = 0.5
+						autonomy_state = autonomy_associated_state
+						freedom_level = 0.875
 					}
 					add_named_threat = {
 						threat = 3
