@@ -158,6 +158,14 @@ country_event = {
 			id = "ROJ"
 			value = 200
 		}
+		if = {
+			limit = { has_non_aggression_pact_with = ROJ }
+			diplomatic_relation = {
+				country = ROJ
+				relation = non_aggression_pact
+				active = no
+			}
+		}
 	}
 	option = {
 		name = SyriaFocus.2.b
@@ -2140,30 +2148,28 @@ country_event = {
 		}
 		custom_effect_tooltip = TT_TEMPORARY_LEADER
 		hidden_effect = { kill_country_leader = yes }
-		if = {
-			limit = { NOT = { has_government = neutrality } }
-			clear_array = ruling_party
-			clear_array = gov_coalition_array
-			add_to_array = { ruling_party = 12 }
-			set_country_flag = set_Neutral_Muslim_Brotherhood
-			add_popularity = { ideology = neutrality popularity = 0.15 }
-			hidden_effect = {
-				set_temp_variable = { election_year = global.year }
-				subtract_from_temp_variable = { election_year = 3 }
-				meta_effect = {
-					text = {
-						set_politics = {
-							ruling_party = neutrality
-							elections_allowed = yes
-							last_election = "[YEAR].[MONTH].1"
-							election_frequency = 60
-						}
+		clear_array = ruling_party
+		clear_array = gov_coalition_array
+		add_to_array = { ruling_party = 12 }
+		set_country_flag = set_Neutral_Muslim_Brotherhood
+		add_popularity = { ideology = neutrality popularity = 0.15 }
+		hidden_effect = {
+			set_temp_variable = { election_year = global.year }
+			subtract_from_temp_variable = { election_year = 3 }
+			set_country_flag = no_leader_change
+			meta_effect = {
+				text = {
+					set_politics = {
+						ruling_party = neutrality
+						elections_allowed = yes
+						last_election = "[YEAR].[MONTH].1"
+						election_frequency = 60
 					}
-					YEAR = election_year
-					MONTH = global.month
 				}
-				clr_country_flag = no_leader_change
+				YEAR = election_year
+				MONTH = global.month
 			}
+			clr_country_flag = no_leader_change
 		}
 		random_list = {
 			70 = { }
@@ -2173,6 +2179,26 @@ country_event = {
 					size = 0.3
 				}
 				set_global_flag = SYR_civil_war_started_early
+				load_focus_tree = {
+					tree = Syria_Focus_2017
+					keep_completed = yes
+				}
+				every_country = {
+					limit = {
+						original_tag = SYR 
+						NOT = { has_idea = divided_syria }
+					}
+					add_ideas = divided_syria 
+				}
+				if = {
+					limit = {
+						LEB = { is_subject_of = ROOT }
+					}
+					set_autonomy = {
+						target = LEB
+						autonomy_state = autonomy_free
+					}
+				}
 			}
 		}
 		complete_national_focus = SYR_flowers_of_damascus_spring
@@ -2226,6 +2252,26 @@ country_event = {
 						}
 					}
 					set_global_flag = SYR_civil_war_started_early
+					load_focus_tree = {
+						tree = Syria_Focus_2017
+						keep_completed = yes
+					}
+					every_country = {
+						limit = {
+							original_tag = SYR 
+							NOT = { has_idea = divided_syria }
+						}
+						add_ideas = divided_syria 
+					}
+					if = {
+						limit = {
+							LEB = { is_subject_of = ROOT }
+						}
+						set_autonomy = {
+							target = LEB
+							autonomy_state = autonomy_free
+						}
+					}
 				}
 			}
 		}
@@ -2258,6 +2304,26 @@ country_event = {
 						}
 					}
 					set_global_flag = SYR_civil_war_started_early
+					load_focus_tree = {
+						tree = Syria_Focus_2017
+						keep_completed = yes
+					}
+					every_country = {
+						limit = {
+							original_tag = SYR 
+							NOT = { has_idea = divided_syria }
+						}
+						add_ideas = divided_syria 
+					}
+					if = {
+						limit = {
+							LEB = { is_subject_of = ROOT }
+						}
+						set_autonomy = {
+							target = LEB
+							autonomy_state = autonomy_free
+						}
+					}
 				}
 			}
 		}
