@@ -4255,21 +4255,21 @@
  PAD_fascism_ADJ: "Padanian"
  PAD_communism_ADJ: "Padanian"
  
- AND_communism: "Andorra"
- AND_communism_DEF: "Andorra"
- AND_fascism: "Andorra"
- AND_fascism_DEF: "Andorra"
- AND_democratic: "Andorra"
- AND_democratic_DEF: "Andorra"
- AND_neutrality: "Andorra"
- AND_neutrality_DEF: "Andorra"
- AND_nationalist: "Andorra"
- AND_nationalist_DEF: "Andorra"
- AND_nationalist_ADJ: "Andorran"
- AND_democratic_ADJ: "Andorran"
- AND_neutrality_ADJ: "Andorran"
- AND_fascism_ADJ: "Andorran"
- AND_communism_ADJ: "Andorran"
+ ADO_communism: "Andorra"
+ ADO_communism_DEF: "Andorra"
+ ADO_fascism: "Andorra"
+ ADO_fascism_DEF: "Andorra"
+ ADO_democratic: "Andorra"
+ ADO_democratic_DEF: "Andorra"
+ ADO_neutrality: "Andorra"
+ ADO_neutrality_DEF: "Andorra"
+ ADO_nationalist: "Andorra"
+ ADO_nationalist_DEF: "Andorra"
+ ADO_nationalist_ADJ: "Andorran"
+ ADO_democratic_ADJ: "Andorran"
+ ADO_neutrality_ADJ: "Andorran"
+ ADO_fascism_ADJ: "Andorran"
+ ADO_communism_ADJ: "Andorran"
 
  CAL_communism: "California"
  CAL_communism_DEF: "California"
