@@ -63,12 +63,20 @@ Politics/Influence
 - Changed Charles Taylor to Right-Wing Populist from Neutral Autocracy
 - Added influence values for Liberian and Sierra Leonean rebels
 - Made Armed Forces Revolutionary council a puppet of Taylor's Liberia to fix some weirdness with the wars
+- The default subject level is now Satellite instead of Puppet (2nd highest autonomy level)
+- Disabled Collaboration Governments
+- The influence puppet action now makes the target an Associated State (highest autonomy level)
 
 Content
 - Added ceasefire for Ethiopian-Eritrean war to stop them fighting forever
 - New Game Rules to Randomize Outlooks/Religion/Internal Factions
 - New pictures and names for Italian vehicles
 - Added custom name lists for Italian divisions and ships
+- Syrian focus "Increase Exports" now raises your export law
+- Simplified Syrian "Depose the Hashemites" focus coup chance calculation
+- Syrian focuses for choosing between conscripted army and volunteer army now show correct effects
+- After relations between Syria and Rojava break down, their NAP is disabled
+- If Syria goes into civil war, it will get the Divided Syria idea and Lebanon will break free
 
 Graphics
 - Updated Graphics for Coat of Arms
@@ -126,6 +134,7 @@ Bugfixes
 - Reworked money scripts so MP bug should now be fixed
 - Flag compression redone
 - all text icons in battles should now work as intended
+- Added back Andorra's name
 
 Map
 - New states in West Africa
